# zlabwiki

./: .gitignore  LICENSE.md  README.md  Trackhub_description.md  UCSC_genome_browser_tutorial.md  ascii_logo.txt  astro.config.mjs  computing_resources.md  ec.config.mjs  getting_started.md  learning_resources.md  myst.yml  package-lock.json  package.json  pyproject.toml  root.md  scratch.md  software_tools.md  zervers_stats.json
.github/workflows/: deploy.yml
docs/: build.sh  server_usage_guidelines.md
images/: trackhub_descripiton.html  wget-log
public/: CNAME
src/: content.config.ts
src/assets/data/: papers.json
src/assets/images/: trackhub_descripiton.html
src/components/: Authors.astro  Hero.astro  ImageLabel.astro  PageList.astro  PageTitle.astro  PaperCard.astro  PaperCard.astro.old  PaperCarousel.astro
src/content/docs/: getting-started.mdx  index.mdx
src/content/docs/devops-tutorials/: backup.mdx  cluster-software.mdx  docker-containerization.mdx  dropbox-uploader.mdx  git.mdx  globus.mdx  index.mdx  printer-access.mdx  python-package.mdx  ssh.mdx  systems-administration.mdx  terminal-multiplexer.mdx  ucsc-genome-browser-tutorial.mdx
src/content/docs/references/: color-mappings.mdx  file-formats.mdx  programming.mdx
src/content/docs/software-tutorials/: docker.mdx  rclone-dropbox.md  snakemake.mdx  vim.mdx
src/content/docs/troubleshooting/: jupyterlab.mdx  ssh.mdx
src/styles/: custom.css
