[tool.poetry]
name = "zlabwiki"
version = "0.1.1"
description = ""
authors = ["Christian S. Ramirez"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
mystmd = "^1.3.19"
numpy = "^2.2.1"
matplotlib = "^3.10.0"
jupyterlab-myst = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
